Criando CRUDs de menu e itens de menu.