@@ -1,7 +1,8 @@
 package com.postech.challenge_01.usecases.menu_item;
 
-import com.postech.challenge_01.domains.menu_item.MenuItem;
+import com.postech.challenge_01.domains.MenuItem;
 import com.postech.challenge_01.repositories.menu_item.MenuItemRepository;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -24,9 +25,16 @@ class FindAllMenuItemsUseCaseTest {
     @InjectMocks
     private FindAllMenuItemsUseCase useCase;
 
+    private AutoCloseable closeable;
+
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        this.closeable = MockitoAnnotations.openMocks(this);
+    }
+
+    @AfterEach
+    void tearDown() throws Exception {
+        closeable.close();
     }
 
     @Test
@@ -61,18 +69,20 @@ class FindAllMenuItemsUseCaseTest {
 
         assertEquals(menuItems.size(), result.size());
 
-        assertEquals(menuItem1.getId(), result.get(0).id());
-        assertEquals(menuItem1.getMenuId(), result.get(0).menuId());
-        assertEquals(menuItem1.getName(), result.get(0).name());
-        assertEquals(menuItem1.getDescription(), result.get(0).description());
-        assertEquals(menuItem1.getDineInOnly(), result.get(0).dineInOnly());
-        assertEquals(menuItem1.getPlatePhoto(), result.get(0).platePhoto());
+        var resultMenu1 = result.getFirst();
+        assertEquals(menuItem1.getId(), resultMenu1.id());
+        assertEquals(menuItem1.getMenuId(), resultMenu1.menuId());
+        assertEquals(menuItem1.getName(), resultMenu1.name());
+        assertEquals(menuItem1.getDescription(), resultMenu1.description());
+        assertEquals(menuItem1.getDineInOnly(), resultMenu1.dineInOnly());
+        assertEquals(menuItem1.getPlatePhoto(), resultMenu1.platePhoto());
 
-        assertEquals(menuItem2.getId(), result.get(1).id());
-        assertEquals(menuItem2.getMenuId(), result.get(1).menuId());
-        assertEquals(menuItem2.getName(), result.get(1).name());
-        assertEquals(menuItem2.getDescription(), result.get(1).description());
-        assertEquals(menuItem2.getDineInOnly(), result.get(1).dineInOnly());
-        assertEquals(menuItem2.getPlatePhoto(), result.get(1).platePhoto());
+        var resultMenu2 = result.get(1);
+        assertEquals(menuItem2.getId(), resultMenu2.id());
+        assertEquals(menuItem2.getMenuId(), resultMenu2.menuId());
+        assertEquals(menuItem2.getName(), resultMenu2.name());
+        assertEquals(menuItem2.getDescription(), resultMenu2.description());
+        assertEquals(menuItem2.getDineInOnly(), resultMenu2.dineInOnly());
+        assertEquals(menuItem2.getPlatePhoto(), resultMenu2.platePhoto());
     }
 }
